changed copy in bio

--- a/html/index.html
+++ b/html/index.html
@@ -162,7 +162,7 @@
                 </span>
               </span>
             </div>
-            <p>Hi! My name is Luis. I'm all about lean mindset, entrepreneurship and building great products solving real problems.
+            <p>Hi! My name is Luis. I'm all about lean mindset, entrepreneurship and solving real problems by building great products.
             I'm a former Project Manager at Toyota, ex-Zalando Innovation Manager and most recently the Co-Founder of a Digital & Innovation
             Consulting company in Berlin. I was born, raised in Venezuela and since 2015, Germany has offered me a beautiful second home. <br>
             Morning Runner, sporadic Coder and enthusiastic about Marathons, Habits' building, Well-being and Cryptocurrencies.</p>
