added submit CTA

--- a/html/index.html
+++ b/html/index.html
@@ -920,7 +920,7 @@
           <div class="wrapper">
             <div class="left">
               <div class="fields">
-                <form name="contact" class="contact_form" id="contact_form" autocomplete="off" netlify>
+                <form action="#" name="contact" class="contact_form" id="contact_form" netlify>
                   <div class="returnmessage" data-success="Your message has been received, We will contact you soon."></div>
                   <div class="empty_notice"><span>Please Fill Required Fields</span></div>
                   <div class="first">
@@ -937,7 +937,7 @@
                     <textarea name="message" id="message" placeholder="Message"></textarea>
                   </div>
                   <div class="shane_tm_button">
-                    <a id="send_message" href="#"><span>Send Message</span></a>
+                    <a id="send_message" type="submit"><span>Send Message</span></a>
                   </div>
 
                   <!-- PS: If you want to change mail address to yours, please open modal.php and go to line 4 -->
