--- a/html/index.html
+++ b/html/index.html
@@ -920,29 +920,30 @@
           <div class="wrapper">
             <div class="left">
               <div class="fields">
-                <form action="#" name="contact" class="contact_form" id="contact_form" netlify>
-                  <div class="returnmessage" data-success="Your message has been received, We will contact you soon."></div>
-                  <div class="empty_notice"><span>Please Fill Required Fields</span></div>
-                  <div class="first">
-                    <ul>
-                      <li>
-                        <input name="name" id="name" type="text" placeholder="Name">
-                      </li>
-                      <li>
-                        <input name="email" id="email" type="text" placeholder="Email">
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="last">
-                    <textarea name="message" id="message" placeholder="Message"></textarea>
-                  </div>
-                  <div class="shane_tm_button">
-                    <a id="send_message" type="submit"><span>Send Message</span></a>
-                  </div>
-
-                  <!-- PS: If you want to change mail address to yours, please open modal.php and go to line 4 -->
-
-								</form>
+                  <form name="contact" class="contact_form" id="contact_form" method="POST" data-netlify="true">
+                    <div class="first">
+                      <ul>
+                        <li>
+                          <p>
+                            <label>Your Name: <input type="text" name="name" /></label>
+                          </p>
+                        </li>
+                        <li>
+                          <p>
+                            <label>Your Email: <input type="email" name="email" /></label>
+                          </p>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="last">
+                      <p>
+                        <label>Message: <textarea name="message"></textarea></label>
+                      </p>
+                    </div>
+                    <div class="shane_tm_button">
+                      <button><a id="send_message" type="submit"><span>Send Message</span></a></button>
+                    </div>
+                  </form>
 							</div>
 						</div>
 <!-- 						<div class="right">
