style send message button

--- a/html/index.html
+++ b/html/index.html
@@ -941,7 +941,7 @@
                       </p>
                     </div>
                     <div class="shane_tm_button">
-                      <button type="submit"><a><span>Send Message</span></a></button>
+                      <button type="submit" id="send-button"><a><span>Send Message</span></a></button>
                     </div>
                   </form>
 							</div>
