--- a/html/index.html
+++ b/html/index.html
@@ -163,9 +163,9 @@
               </span>
             </div>
             <p>Hi! My name is Luis. I'm all about lean mindset, entrepreneurship and solving real problems by building great products.
-            I'm a former Project Manager at Toyota, ex-Zalando Innovation Manager and most recently the Co-Founder of a Digital & Innovation
+            I'm a former Project Manager at Toyota, ex-Zalando Innovation Manager and most recently the Co-Founder of a Product Development & Innovation
             Consulting company in Berlin. I was born, raised in Venezuela and since 2015, Germany has offered me a beautiful second home. <br>
-            Morning Runner, sporadic Coder and enthusiastic about Marathons, Habits' building, Well-being and Cryptocurrencies.</p>
+            Morning Runner, Product-minded, sporadic Coder and enthusiastic about Marathons, Habits' building, Well-being and Cryptocurrencies.</p>
           </div>
           <div class="right">
             <ul>
