improved copy in experience

--- a/html/index.html
+++ b/html/index.html
@@ -184,6 +184,13 @@
 						<span>What I Do</span>
 					</div>
 					<ul>
+            <li>
+              <div class="list_inner">
+                <img class="svg" src="img/svg/productive.svg" alt="" />
+                <h3>Product Management</h3>
+                <p>Product Strategy, Product Roadmapping and agile development process across cross-functional teams.</p>
+              </div>
+            </li>
 						<li>
 							<div class="list_inner">
 								<img class="svg" src="img/svg/innovation.svg" alt="" />
@@ -217,13 +224,6 @@
                 <img class="svg" src="img/svg/coaching.svg" alt="" />
                 <h3>Startup Coaching</h3>
                 <p>Customer Development, Lean Startup, Business Model Design, Bootstrapping and Growth Hacking.</p>
-              </div>
-            </li>
-            <li>
-              <div class="list_inner">
-                <img class="svg" src="img/svg/united.svg" alt="" />
-                <h3>Offsites' Facilitation</h3>
-                <p>Desing and facilitation of team retreats: purpose, culture, values, goal-setting and team building.</p>
               </div>
             </li>
 					</ul>
